# Aspect2D

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
DemoPlatformer/: CMakeLists.txt  DemoPlatformer.vcxproj  DemoPlatformer.vcxproj.filters  PlatformerApp.cpp  PlatformerApp.h  main.cpp
aspect2d-engine/: CMakeLists.txt  aspect2d-engine.sln  aspect2d-engine.vcxproj  aspect2d-engine.vcxproj.filters
aspect2d-engine/Debug/: aspect2d-engine.idb  glad.idb
aspect2d-engine/src/: Aspect.h  pch.h
aspect2d-engine/src/Platform/opengl/: OpenGLRenderer.cpp  OpenGLRenderer.h  WindowsWindow.cpp  WindowsWindow.h
aspect2d-engine/src/core/: AspectApp.cpp  AspectApp.h  Base.h  Renderer.cpp  Renderer.h  RendererInterface.h  Window.cpp  Window.h  WindowInterface.h
